test/errors/error42.base
None of the following types: real, fix16, can be match with array(real), array(real, 'unbound(19)). 
  val x;
  x[0] = 1.0;
   ^
